# ChangeLog for app-misc/lirc
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/lirc/ChangeLog,v 1.17 2004/01/19 11:42:12 lanius Exp $

  19 Jan 2004; Heinrich Wendel <lanius@gentoo.org> lirc-0.7.0_pre2.ebuild,
  files/lirc-0.7.0_pre2-i2c.patch.gz:
  added patch to compile with i2c 2.8

  17 Jan 2004; Bartosch Pixa <darkspecter@gentoo.org> lirc-0.7.0_pre2.ebuild:
  set ppc in keywords

  14 Jan 2004; Brian Jackson <iggy@gentoo.org> lirc-0.6.6-r1.ebuild,
  lirc-0.7.0_pre2.ebuild, files/lircd:
  updated dates in ebuilds, added ${LIRCD_OPTS} to the start cmd line to
  pass extra options to the daemon

  29 Dec 2003; Sven Blumenstein <bazik@gentoo.org> lirc-0.6.6-r1.ebuild:
  Marked sparc to fix gxine depend.

  29 Dec 2003; Heinrich Wendel <lanius@gentoo.org> lirc-0.7.0_pre2.ebuild:
  finally fix kernel 2.6 support

  29 Nov 2003; Heinrich Wendel <lanius@gentoo.org> lirc-0.7.0_pre2.ebuild:
  fixed typo in LIRC_OPTS

  26 Nov 2003; Heinrich Wendel <lanius@gentoo.org> lirc-0.7.0_pre2.ebuild:
  added check for 2.6 kernel which removes all drivers from build

  25 Nov 2003; Heinrich Wendel <lanius@gentoo.org> lirc-0.7.0_pre2.ebuild:
  added warning about 2.6 kernel

  16 Nov 2003; Brad House <brad_mssw@gentoo.org> lirc-0.6.6-r1.ebuild:
  mark stable on amd64

  23 Oct 2003; Martin Holzer <mholzer@gentoo.org> lirc-0.7.0_pre2.ebuild:
  added warning about irda and kernel. Closes #30847.

  13 Oct 2003; Martin Holzer <mholzer@gentoo.org> :
  fixing sandbox issue. closes #30982

*lirc-0.7.0_pre2 (11 Oct 2003)

  11 Oct 2003; Heinrich Wendel <lanius@gentoo.org> lirc-0.6.5.ebuild,
  lirc-0.7.0_pre2.ebuild, files/lirc-0.6.5-gentoo.diff.bz2:
  cleanups

*lirc-0.7.0_pre2 (11 Oct 2003)

  11 Oct 2003; Heinrich Wendel <lanius@gentoo.org> lirc-0.7.0_pre2.ebuild:
  version bump

*lirc-0.6.6-r2 (09 Sep 2003)

  09 Sep 2003; Martin Holzer <mholzer@gentoo.org> lirc-0.6.6-r2.ebuild,