@@ -1,0 +1,2 @@
+# Options to pass to the lircd process
+LIRC_OPTS="-d /dev/lirc/lirc0"
